# mario.annotations

./: .gitattributes  .gitignore  .gitmodules  README.md  invoke.yaml  pyproject.toml  tasks.py
.datalad/: config
annotations/: generate_annotations.py
code/mario_annotations/: __init__.py
code/mario_annotations/annotations/: generate_annotations.py
sub-01/ses-001/func/: sub-01_ses-001_task-mario_run-01_desc-annotated_events.tsv  sub-01_ses-001_task-mario_run-02_desc-annotated_events.tsv  sub-01_ses-001_task-mario_run-03_desc-annotated_events.tsv  sub-01_ses-001_task-mario_run-04_desc-annotated_events.tsv
sub-01/ses-002/func/: sub-01_ses-002_task-mario_run-01_desc-annotated_events.tsv  sub-01_ses-002_task-mario_run-02_desc-annotated_events.tsv  sub-01_ses-002_task-mario_run-03_desc-annotated_events.tsv
sub-01/ses-003/func/: sub-01_ses-003_task-mario_run-01_desc-annotated_events.tsv  sub-01_ses-003_task-mario_run-02_desc-annotated_events.tsv  sub-01_ses-003_task-mario_run-03_desc-annotated_events.tsv  sub-01_ses-003_task-mario_run-04_desc-annotated_events.tsv  sub-01_ses-003_task-mario_run-05_desc-annotated_events.tsv
sub-01/ses-004/func/: sub-01_ses-004_task-mario_run-01_desc-annotated_events.tsv  sub-01_ses-004_task-mario_run-02_desc-annotated_events.tsv  sub-01_ses-004_task-mario_run-03_desc-annotated_events.tsv  sub-01_ses-004_task-mario_run-04_desc-annotated_events.tsv
sub-01/ses-005/func/: sub-01_ses-005_task-mario_run-01_desc-annotated_events.tsv  sub-01_ses-005_task-mario_run-02_desc-annotated_events.tsv  (+3 more)
(+463 files in other folders)
